refactor: update PathSecurityUtil to introduce a safer more generic path traversal utility method